@@ -1463,18 +1463,16 @@ curr_libs="$LIBS"
 	else
 		AC_MSG_NOTICE([DISAM library found])
 	fi
-	if test "$ac_cv_search_isopen" = "no"; then
-	 # note: old DISAM versions only ship disam.h, newer _may_ provide it as convenience
-	 #       to not break an environment which has both old and new we explicit only check
-	 #       what we want to use, matching to the library found (and assume that "none needed"
-	 #       means we're using one of the newer ones)
-	 if test "$ac_cv_search_isopen" = "disam"; then
-	  AC_CHECK_HEADERS([disam.h], [],
-		AC_MSG_ERROR([disam.h is required for DISAM]))
-	 elif test "$ac_cv_search_isopen" != "no"; then
-	  AC_CHECK_HEADERS([iswrap.h isconfig.h isintstd.h], [],
-		AC_MSG_ERROR([iswrap.h isconfig.h isintstd.h are required for $ac_cv_search_isopen]))
-	 fi
+	# note: old DISAM versions only ship disam.h, newer _may_ provide it as convenience
+	#       to not break an environment which has both old and new we explicit only check
+	#       what we want to use, matching to the library found (and assume that "none needed"
+	#       means we're using one of the newer ones)
+	if test "$ac_cv_search_isopen" = "disam"; then
+	 AC_CHECK_HEADERS([disam.h], [],
+	   AC_MSG_ERROR([disam.h is required for DISAM]))
+	elif test "$ac_cv_search_isopen" != "no"; then
+	 AC_CHECK_HEADERS([iswrap.h isconfig.h isintstd.h], [],
+	   AC_MSG_ERROR([iswrap.h isconfig.h isintstd.h are required for $ac_cv_search_isopen]))
 	fi
 	unset ac_cv_search_isopen
 	CPPFLAGS="$curr_cppflags"
@@ -1493,6 +1491,7 @@ curr_libs="$LIBS"
 	AC_CHECK_HEADERS([vbisam.h], [],
 		AC_MSG_ERROR([vbisam.h is required for VBISAM]))
 	unset ac_cv_search_isopen
+	unset ac_cv_search_isfullclose
 	# note: isfullclose is available since 2.0, isopen since 1.0
 	AC_SEARCH_LIBS([isfullclose], [vbisam],
 		[AC_DEFINE([WITH_VBISAM], [1])
@@ -1501,14 +1500,14 @@ curr_libs="$LIBS"
 	if test "$ac_cv_search_isopen" = "no"; then
 		AC_MSG_ERROR([libvbisam >= 2.0 is required for VBISAM])
 	elif test "$ac_cv_search_isopen" != "none required"; then
-		AC_MSG_NOTICE([VBISAM library found as $ac_cv_search_isopen])
-		VBISAM_LIBS="$VBISAM_LIBS $ac_cv_search_isopen"
+		AC_MSG_NOTICE([VBISAM library found as $ac_cv_search_isfullclose])
+		VBISAM_LIBS="$VBISAM_LIBS $ac_cv_search_isfullclose"
 	elif test "x$VBISAM_LIBS" != "x"; then
 		AC_MSG_NOTICE([VBISAM library found in $VBISAM_LIBS])
 	else
 		AC_MSG_NOTICE([VBISAM library found])
 	fi
-	unset ac_cv_search_isopen
+	unset ac_cv_search_isfullclose
 	CPPFLAGS="$curr_cppflags"
 	LIBS="$curr_libs"
    fi ],
@@ -1525,7 +1524,7 @@ curr_libs="$LIBS"
 	AC_CHECK_HEADERS([vbisam.h], [],
 		AC_MSG_ERROR([vbisam.h is required for VBISAM in C-ISAM mode]))
 	unset ac_cv_search_isopen
-	AC_SEARCH_LIBS([isopen], [vbcisam vbisam],
+	AC_SEARCH_LIBS([isopen], [vbcisam],
 		[AC_DEFINE([WITH_VBCISAM], [1])
 		 cob_gen_vbcisam=yes
 		], [], [$VBISAM_LIBS])
