@@ -32,7 +32,7 @@ AM_LDFLAGS = $(COB_FIX_LIB) $(COB_FIX_LIBTOOL) -no-undefined
 
 
 libcob_la_SOURCES = common.c move.c numeric.c strings.c \
-	fileio.c fextfh.c focextfh.c  mlio.c \
+	fileio.c fextfh.c focextfh.c  mlio.c fisam.c \
 	call.c intrinsic.c termio.c screenio.c reportio.c cobgetopt.c 
 
 libcob_la_LIBADD = $(LIBCOB_LIBS) $(top_builddir)/lib/libsupport.a \
@@ -43,7 +43,7 @@ INDEXED_LD_FLAGS = -version-info 1:0:0
 
 if COB_MAKE_CISAM_LIB
 lib_ci = libcobci.la
-libcobcib_la_SOURCES = fisam.c
+libcobci_la_SOURCES = libcobci.c
 libcobci_la_LIBADD = libcob.la $(CISAM_LIBS)
 libcobci_la_LDFLAGS = $(AM_LDFLAGS) $(INDEXED_LD_FLAGS)
 libcobci_la_CFLAGS = $(AM_CFLAGS) $(CISAM_CFLAGS)
@@ -53,7 +53,7 @@ endif
 
 if COB_MAKE_DISAM_LIB
 lib_di = libcobdi.la
-libcobdi_la_SOURCES = fisam.c
+libcobdi_la_SOURCES = libcobdi.c
 libcobdi_la_LIBADD = libcob.la $(DISAM_LIBS)
 libcobdi_la_LDFLAGS = $(AM_LDFLAGS) $(INDEXED_LD_FLAGS)
 libcobdi_la_CFLAGS = $(AM_CFLAGS) $(DISAM_CFLAGS)
@@ -63,7 +63,7 @@ endif
 
 if COB_MAKE_VBISAM_LIB
 lib_vb = libcobvb.la
-libcobvb_la_SOURCES = fisam.c
+libcobvb_la_SOURCES = libcobvb.c
 libcobvb_la_LIBADD = libcob.la $(VBISAM_LIBS)
 libcobvb_la_LDFLAGS = $(AM_LDFLAGS) $(INDEXED_LD_FLAGS)
 libcobvb_la_CFLAGS = $(AM_CFLAGS) $(VBISAM_CFLAGS)
@@ -73,7 +73,7 @@ endif
 
 if COB_MAKE_VBCISAM_LIB
 lib_vc = libcobvc.la
-libcobvc_la_SOURCES = fisam.c
+libcobvc_la_SOURCES = libcobvc.c
 libcobvc_la_LIBADD = libcob.la $(VBCISAM_LIBS)
 libcobvc_la_LDFLAGS = $(AM_LDFLAGS) $(INDEXED_LD_FLAGS)
 libcobvc_la_CFLAGS = $(AM_CFLAGS) $(VBCISAM_CFLAGS)
@@ -124,7 +124,7 @@ endif
 lib_LTLIBRARIES = libcob.la $(lib_ci) $(lib_di) $(lib_vb) $(lib_vc) \
 	$(lib_od) $(lib_oc) $(lib_db) $(lib_lm)
 
-EXTRA_DIST = coblocal.h cobinternal.h system.def sysdefines.h fileio.h
+EXTRA_DIST = coblocal.h cobinternal.h system.def sysdefines.h fileio.h fisam.c
 pkgincludedir = $(includedir)/libcob
 pkginclude_HEADERS = common.h cobgetopt.h exception.def
 
