@@ -1,4 +1,8 @@
 
+2021-01-22  Ron Norman <rjn@inglenet.com> 
+
+	* configure.ac: Some fixes to the previous changes
+
 2021-01-22  Simon Sobisch <simonsobisch@gnu.org>
 
 	* configure.ac: rewritten checks for indexed handlers and
